2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>

	* wireless-applet.glade:  HIGify the preferences dialog: fix widget
	padding; add missing mnemonic; set default button.
	 
2003-03-20  Evan Martin <martine@cs.washington.edu>

	* wireless-applet.c: When there is no wireless device, show "No
	Wireless Devices" in prefs dialog (instead of an empty menu).

2003-03-10  Kevin Vandersloot <kfv101@psu.edu>

	* wireless-applet.c: destroy the dialogs after being run. Fixes bug #104465. Draw
	the applet even if no devices. Also don't close the wireless file if it doesn't exist

2003-03-10  Kevin Vandersloot <kfv101@psu.edu>

	* wireless-applet.c: don't set gconf string if it's NULL. Also if there's no devices then
	there's no menuitems so don't try to get data from them. Should fix bug #107722

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* wireless-applet.c (wireless_applet_destroy): Destroy
	the prefs dialog on destroying the applet.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_Panel_WirelessApplet.server.in.in: added bugzilla attributtes

2002-12-10  Kjartan Maraas  <kmaraas@gnome.org>

	* wireless-applet.c (wireless_applet_about_cb): Don't leak
	the about logo. #100776.
	
2002-11-07  Bastien Nocera  <hadess@hadess.net>

	* broken-0.png:
	* no-link-0.png:
	* signal-1-40.png:
	* signal-41-60.png:
	* signal-61-80.png:
	* signal-81-100.png: New icons by Jakub Steiner <jimmac@ximian.com>,
	swapped the no-link and the broken icons. Broken is when the device
	isn't up, No Link is when it's up but there are no Base Stations
	available.

2002-11-06  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (wireless_applet_draw): simplify the code,
	should fix problem with the pixmap not being in sync with the tooltip
	(and the actual state)

2002-07-18  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (wireless_applet_draw): fix display of the
	percentage when it's 0% -> N/A

2002-07-18  Mark McLoughlin  <mark@skynet.ie>
