@@ -1,3 +1,8 @@
+2003-04-30  Kevin Vandersloot <kfv101@psu.edu>
+
+	* wireless-applet.c: open pixbufs on startup so they aren't read form the file
+	all the time. Fixes bug #111893
+
 2003-04-26  Dennis Cranston <dennis_cranston at yahoo com>
 
 	* wireless-applet.glade:  HIGify the preferences dialog: fix widget
